--- a/index.css
+++ b/index.css
@@ -101,6 +101,7 @@
     justify-content: space-between;
 }
 .sim-slider-element img {
+    padding-right: 50px;
     width: 300px;
     height: 300px;
     border-radius: 360px;
