--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 .page {
     margin: 0 auto;
-    background: #ffffff;
+    background: #FFCCEE;
     width: 100%;
     height: 100%;
 }
@@ -17,7 +17,7 @@
 }
 
 .button {
-    background-color: rgba(255, 0, 170, 0.67);
+    background-color: rgba(255, 204, 238, 0.67);
     border: none;
     border-radius: 50px;
     color: white;
@@ -95,16 +95,16 @@
 
 .sim-slider-element {
     position: absolute;
-    top: 10%;
+    top: 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .sim-slider-element img {
-    padding-right: 150px;
-    width: 100px;
-    height: 100px;
-    border-radius: 160px;
+    padding-right: 100px;
+    width: 300px;
+    height: 300px;
+    border-radius: 360px;
 }
 
 
